Add Features and Tables.

--- a/Figures_Tables/main_text/Figure 4.ipynb
+++ b/Figures_Tables/main_text/Figure 4.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sys\n",
-    "sys.path.append(\"../../\")\n",
+    "sys.path.append(\"../../src/\")\n",
     "import utility\n",
     "import pandas as pd\n",
     "\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self._where(~key, value, inplace=True)\n",
-      "../../utility.py:164: SettingWithCopyWarning: \n",
+      "../../src/utility.py:164: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +110,8 @@
     }
    ],
    "source": [
+    "cluster_labels = [\"RRS\", \"UPE\", \"AP\", \"SE\"]\n",
+    "\n",
     "df_used = df_used.rename(columns = {\"IEA0\":\"IEA$_{emph}$\", \"IEA1\":\"IEA$_{airway}$\", \"KM_v2\":\"KMeans Clusters\"})\n",
     "\n",
     "sns.set(font_scale = 1.5)\n",
@@ -134,7 +136,7 @@
     "\n",
     "ax2 = plt.subplot(122)\n",
     "ax2 = sns.boxplot(x=\"KMeans Clusters\", y=\"IEA$_{airway}$\", data=df_used)\n",
-    "ax2.set_xticklabels([\"RRS\", \"UPE\", \"AP\", \"SE\"])\n",
+    "ax2.set_xticklabels(cluster_labels)\n",
     "ax2.set_ylim(-3, 6.)\n",
     "\n",
     "ax2.grid(False)\n",
@@ -145,58 +147,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# p-values with IEA$_{emph}$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 0\n",
-      "2 0\n",
-      "2 1\n",
-      "3 0\n",
-      "3 1\n",
-      "3 2\n"
+      "UPE vs RRS p-value:1.04e-05\n",
+      "AP vs RRS p-value:9.73e-06\n",
+      "AP vs UPE p-value:5.50e-12\n",
+      "SE vs RRS p-value:1.14e-61\n",
+      "SE vs UPE p-value:5.93e-46\n",
+      "SE vs AP p-value:8.31e-47\n"
      ]
     }
    ],
    "source": [
-    "for iii in range(4):\n",
-    "    for jjj in range(iii):\n",
-    "        print(iii, jjj)\n"
+    "for iii in range(1, 5):\n",
+    "    for jjj in range(1, iii ):\n",
+    "        \n",
+    "        p_values = kruskal( \n",
+    "                df_used.loc[df_used[\"KMeans Clusters\"] == iii, \"IEA$_{emph}$\"], \n",
+    "                 df_used.loc[df_used[\"KMeans Clusters\"] == jjj, \"IEA$_{emph}$\"]\n",
+    "               ).pvalue\n",
+    "        \n",
+    "        print( \"{} vs {} p-value:{:.2e}\".format(cluster_labels[iii - 1], cluster_labels[jjj - 1], p_values)\n",
+    "        )\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# p-values with IEA$_{airway}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UPE vs RRS p-value:1.03e-04\n",
+      "AP vs RRS p-value:2.88e-13\n",
+      "AP vs UPE p-value:3.15e-02\n",
+      "SE vs RRS p-value:1.86e-05\n",
+      "SE vs UPE p-value:2.75e-10\n",
+      "SE vs AP p-value:3.65e-18\n"
+     ]
+    }
+   ],
    "source": [
-    "for iii in range(4):\n",
-    "    for jjj in range(iii - 1):\n",
-    "\n",
-    "print( \n",
-    "    kruskal( df_used.loc[df_used[\"KMeans Clusters\"] == 4, \"IEA1\"], \n",
-    "         df_used.loc[df_used[\"KMeans Clusters\"] == 1, \"IEA1\"]\n",
-    "       )\n",
-    ")\n",
-    "\n",
-    "\n",
-    "print( \n",
-    "    kruskal( df_used.loc[df_used[\"KMeans Clusters\"] == 4, \"IEA1\"], \n",
-    "         df_used.loc[df_used[\"KMeans Clusters\"] == 2, \"IEA1\"]\n",
-    "       )\n",
-    ")\n",
-    "\n",
-    "\n",
-    "print( \n",
-    "    kruskal( df_used.loc[df_used[\"KMeans Clusters\"] == 4, \"IEA1\"], \n",
-    "         df_used.loc[df_used[\"KMeans Clusters\"] == 3, \"IEA1\"]\n",
-    "       )\n",
-    ")\n",
-    "\n"
+    "for iii in range(1, 5):\n",
+    "    for jjj in range(1, iii ):\n",
+    "        \n",
+    "        p_values = kruskal( \n",
+    "                df_used.loc[df_used[\"KMeans Clusters\"] == iii, \"IEA$_{airway}$\"], \n",
+    "                 df_used.loc[df_used[\"KMeans Clusters\"] == jjj, \"IEA$_{airway}$\"]\n",
+    "               ).pvalue\n",
+    "        \n",
+    "        print( \"{} vs {} p-value:{:.2e}\".format(cluster_labels[iii - 1], cluster_labels[jjj - 1], p_values)\n",
+    "        )\n",
+    "        \n"
    ]
   },
   {
