--- a/Figures_Tables/Supplementary/Table E2.ipynb
+++ b/Figures_Tables/Supplementary/Table E2.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"../../\")\n",
+    "sys.path.append(\"../../src/\")\n",
     "import IEA_model\n",
     "import numpy as np\n",
     "import torch\n",
