--- a/Figures_Tables/main_text/Table 3.ipynb
+++ b/Figures_Tables/main_text/Table 3.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import numpy as np\n",
     "import sys\n",
-    "sys.path.append(\"../../\")\n",
+    "sys.path.append(\"../../src/\")\n",
     "import utility\n",
     "import pandas as pd\n",
     "\n",
