--- a/Figures_Tables/Supplementary/Table E10.ipynb
+++ b/Figures_Tables/Supplementary/Table E10.ipynb
@@ -78,7 +78,7 @@
    ],
    "source": [
     "df_IEA_P1 = pd.read_csv(\"../../output/IEA_P1.csv\").set_index(\"sid\")\n",
-    "df_data = utility.load_longitudinal()\n",
+    "df_data = utility.load_data()\n",
     "df_PCs = utility.load_SSL_PCs()\n",
     "\n",
     "df_merged = pd.merge(df_IEA_P1, df_data, left_index = True, right_index = True)\n",
@@ -729,7 +729,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -743,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
