--- a/Figures_Tables/Supplementary/Table E2.ipynb
+++ b/Figures_Tables/Supplementary/Table E2.ipynb
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "df_data = utility.load_longitudinal()\n",
+    "df_data = utility.load_data()\n",
     "\n",
     "res = []\n",
     "L = 2\n",
@@ -285,7 +285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
