--- a/Figures_Tables/Supplementary/Table E5.ipynb
+++ b/Figures_Tables/Supplementary/Table E5.ipynb
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "df = utility.load_longitudinal()\n",
+    "df = utility.load_data()\n",
     "\n",
     "df_used = pd.merge(df, df_IEA_all, left_index = True, right_index = True)"
    ]
@@ -801,7 +801,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -815,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
