--- a/Figures_Tables/main_text/Figure 4.ipynb
+++ b/Figures_Tables/main_text/Figure 4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
     "\n",
     "df_IEA = pd.concat([df_IEA_train, df_IEA_test])\n",
     "\n",
-    "df_data = utility.load_longitudinal()\n",
+    "df_data = utility.load_data()\n",
     "\n",
     "df_used = pd.merge(df_data, df_IEA, left_index = True, right_index = True)[ [\"IEA0\", \"IEA1\", \"KM_v2\"]]"
    ]
@@ -241,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
