--- a/Figures_Tables/main_text/Table 1.ipynb
+++ b/Figures_Tables/main_text/Table 1.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "df = utility.load_longitudinal()\n",
+    "df = utility.load_data()\n",
     "covariances = [\"Age_P2\", \"gender\", \"race\", \n",
     "               \"smoking_status_P2\", \n",
     "               \"BMI_P2\", \"ATS_PackYears_P2\",\n",
@@ -281,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
