--- a/Figures_Tables/main_text/Table 4.ipynb
+++ b/Figures_Tables/main_text/Table 4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "df = utility.load_longitudinal()\n",
+    "df = utility.load_data()\n",
     "\n",
     "df_used = pd.merge(df, df_IEA_all, left_index = True, right_index = True)"
    ]
@@ -353,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
