--- a/Figures_Tables/main_text/Table 5.ipynb
+++ b/Figures_Tables/main_text/Table 5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "df = utility.load_longitudinal()\n",
+    "df = utility.load_data()\n",
     "\n",
     "df_used = pd.merge(df, df_IEA, left_index = True, right_index = True)"
    ]
@@ -153,7 +153,6 @@
     }
    ],
    "source": [
-    "df = utility.load_longitudinal()\n",
     "covariances = [\"Age_P2\", \"gender\", \"race\", \n",
     "               \"smoking_status_P2\", \n",
     "               \"BMI_P2\", \"ATS_PackYears_P2\",\n",
@@ -337,7 +336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -351,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
