Update the figures and tables.

--- a/Figures_Tables/Supplementary/TableE1.ipynb
+++ b/Figures_Tables/Supplementary/TableE1.ipynb
@@ -22,6 +22,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -56,11 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_aligned_axes(thold):\n",
+    "    \"\"\"\n",
+    "    Return the aligned axes.\n",
+    "    thold: the thresholds for the adjusted p-values for gene selection.\n",
+    "    \"\"\"\n",
     "\n",
     "    beta = .1\n",
     "    gamma = 1.0\n",
@@ -78,7 +89,7 @@
     "\n",
     "\n",
     "    M = IEA_model.IEA( L = L,  idx_gene = idx_gene ).cuda()\n",
-    "\n",
+    "    # Generate the IEAs with the cross-valudation models\n",
     "    for cv in range(5):\n",
     "        filename = \"../../models/model_L{}_cv{}_beta{}_gamma{}_genes{}\".format(L, cv, beta, gamma, len(idx_gene))\n",
     "\n",
@@ -98,7 +109,8 @@
     "\n",
     "\n",
     "    Z_test_aligned = []\n",
-    "\n",
+    "    \n",
+    "    # Align the IEAs from models with different cross-validation.\n",
     "    for cv in range(0,5):\n",
     "        Z_cat = np.concatenate( [ Z_train_cv[ 0, :, : ], Z_train_cv[ cv, :, : ] ], axis = 1 )\n",
     "        corrcoef = np.corrcoef(Z_cat.T)\n",
@@ -109,7 +121,8 @@
     "\n",
     "            corr_lll = corrcoef[lll, L:]\n",
     "            idx_lll = np.argmax( np.abs(corr_lll) )\n",
-    "\n",
+    "            \n",
+    "            # standardize the IEAs\n",
     "            mean = Z_train_cv[cv, :, idx_lll].mean()\n",
     "            std = Z_train_cv[cv, :, idx_lll].std()\n",
     "\n",
@@ -128,28 +141,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_pairwise_corrcoef(axes, idx):\n",
+    "    \"\"\"\n",
+    "    Computing the pairwise correlation coefficients.\n",
+    "    axes: the aliend IEAs from the cross-validations.\n",
+    "    idx: the index of the IEA.\n",
+    "    \"\"\"\n",
     "    coef = np.corrcoef(axes[:, :, idx])\n",
     "    coef_off_diag = np.array( [coef[iii, jjj] for iii in range(5) for jjj in range(iii)] )\n",
     "    return coef_off_diag.mean(), coef_off_diag.std()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Computing the pairwise correlation coefficients"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/ocean/projects/asc170022p/juc91/anaconda/envs/IEA/lib/python3.7/site-packages/pandas/core/generic.py:8870: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return self._update_inplace(result)\n",
+      "../../src/utility.py:166: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_cov[df_cov == \"\"] = \"nan\"\n",
+      "/ocean/projects/asc170022p/juc91/anaconda/envs/IEA/lib/python3.7/site-packages/pandas/core/frame.py:3718: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._where(-key, value, inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "df_data = utility.load_data()\n",
     "\n",
@@ -182,8 +223,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate the Table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
