--- a/Figures_Tables/Supplementary/TableE10.ipynb
+++ b/Figures_Tables/Supplementary/TableE10.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'lifelines'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_32377/637149080.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlifelines\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCoxPHFitter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'lifelines'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sys\n",
@@ -43,6 +31,13 @@
     "import math\n",
     "\n",
     "from lifelines import CoxPHFitter\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading data"
    ]
   },
   {
@@ -102,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression with Both IEAs and PCs"
+    "# Logistic regression with both IEAs and PCA-I"
    ]
   },
   {
@@ -198,6 +193,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cox harzard model with both IEAs and PCA-I"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -249,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base Regression with FAs only"
+    "# Logistic regression with PCA-I only"
    ]
   },
   {
@@ -342,6 +344,13 @@
     "        exp_cov_dict_PC[col].append(eee + CI2)\n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cox harzard model with PCA-I only"
    ]
   },
   {
@@ -456,6 +465,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tables for the likelihood ratio test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -500,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table for beta coeffcients ( PCs  )"
+    "# Table for beta coeffcients ( PCA-I  )"
    ]
   },
   {
@@ -566,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table for Odds / Hazard Ratio ( PCs)"
+    "# Table for Odds / Hazard Ratio (  PCA-I )"
    ]
   },
   {
@@ -621,7 +637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table for beta coeffcients ( PCs + IEAs  )"
+    "# Table for beta coeffcients (  PCA-I + IEAs  )"
    ]
   },
   {
@@ -687,7 +703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table for Odds / Hazard Ratio ( PCs + IEAs)"
+    "# Table for Odds / Hazard Ratio (  PCA-I + IEAs)"
    ]
   },
   {
