--- a/Figures_Tables/Supplementary/TableE3.ipynb
+++ b/Figures_Tables/Supplementary/TableE3.ipynb
@@ -22,11 +22,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Loading the data"
+   ]
   },
   {
    "cell_type": "code",
@@ -41,6 +41,13 @@
     "df_IEA = pd.concat([df_IEA_train, df_IEA_test])\n",
     "\n",
     "df_merged = pd.merge(df_bands, df_IEA, left_index = True, right_index = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computing the logarithm of the ratio"
    ]
   },
   {
@@ -63,6 +70,13 @@
     "    )\n",
     "    \n",
     "res = np.array(res)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate the table"
    ]
   },
   {
