--- a/Figures_Tables/Supplementary/TableE5.ipynb
+++ b/Figures_Tables/Supplementary/TableE5.ipynb
@@ -33,6 +33,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -89,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression with Both IEAs and COPD measurements"
+    "# Logistic regression with Both IEAs and COPD measurements"
    ]
   },
   {
@@ -194,6 +201,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cox harzard model with both IEAs and COPD measurements"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -245,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base Regression with COPD measurements only"
+    "# Logistic regression with COPD measurements only"
    ]
   },
   {
@@ -341,6 +355,13 @@
     "        exp_cov_dict_base[col].append(eee + CI2)\n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cox harzard model with COPD measurements only"
    ]
   },
   {
