--- a/Figures_Tables/Supplementary/TableE7.ipynb
+++ b/Figures_Tables/Supplementary/TableE7.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -72,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression with Both IEAs and FAs"
+    "# Linear Regression with Both IEAs and FAs"
    ]
   },
   {
@@ -138,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base Regression with FAs only"
+    "# Linear Regression with FAs only"
    ]
   },
   {
