--- a/Figures_Tables/Supplementary/TableE8.ipynb
+++ b/Figures_Tables/Supplementary/TableE8.ipynb
@@ -34,6 +34,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -74,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression with Both IEAs and FAs"
+    "# Logistic Regression with Both IEAs and FAs"
    ]
   },
   {
@@ -169,6 +176,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cox Harzard Model with Both IEAs and FAs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -224,31 +238,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base Regression with FAs only"
+    "# Logistic Regression with FAs only"
    ]
   },
   {
@@ -343,6 +336,13 @@
     "        exp_cov_dict_FA[col].append(eee + CI2)\n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cox harzard model with FAs only"
    ]
   },
   {
