--- a/Figures_Tables/Supplementary/TableE9.ipynb
+++ b/Figures_Tables/Supplementary/TableE9.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -73,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression with Both IEAs and PCs"
+    "# Linear Regression with Both IEAs and PCA-I"
    ]
   },
   {
@@ -139,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base Regression with FAs only"
+    "# Linear regression with PCA-I only"
    ]
   },
   {
@@ -290,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table for beta coeffcients ( PCs  )"
+    "# Table for beta coeffcients ( PCA-I  )"
    ]
   },
   {
@@ -356,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table for beta coeffcients ( FAs + IEAs  )"
+    "# Table for beta coeffcients ( PCA-I + IEAs  )"
    ]
   },
   {
