--- a/Figures_Tables/main_text/Table1.ipynb
+++ b/Figures_Tables/main_text/Table1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +48,6 @@
     "df_IEA_test = pd.read_csv(\"../../output/IEA_test.csv\").set_index(\"sid\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -96,17 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change the variable names\n",
     "cov_label = [iii.replace(\"Frequent_Exacerbator_P2\", \"Frequent Exacerbator (History)\")\\\n",
     "             .replace(\"Frequent_Exacerbator_P3\", \"Frequent Exacerbator (Future)\")\\\n",
     "             .replace(\"smoking_status_P2\", \"%Current Smoker\").replace(\"_P2\", \"\").replace(\"P3\", \"\")\\\n",
@@ -133,6 +127,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computing the mean and variances"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -153,11 +154,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Computing the p-values and organize it into a table"
+   ]
   },
   {
    "cell_type": "code",
@@ -175,8 +176,10 @@
     "    if ccc == \"gender\" or ccc == \"race\" or ccc == \"smoking_status_P2\" \\\n",
     "    or ccc == \"Frequent_Exacerbator_P2\" or ccc == \"Frequent_Exacerbator_P3\" \\\n",
     "    or ccc == \"5-year Mortality_P2\": \n",
+    "        # chisuqre test for categorical variables\n",
     "        p_val = proportions_chisquare( [(C1 == 1).sum(), (C2 == 1).sum()], [len(df_train), len(df_test)] )[1]\n",
     "    else:\n",
+    "        # kruskal test for categorical variables\n",
     "        p_val = kruskal(C1, C2).pvalue\n",
     "    \n",
     "    \n",
@@ -222,6 +225,13 @@
     "    \n",
     "    val.append(tmp)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate the table"
    ]
   },
   {
