--- a/Figures_Tables/main_text/Table2.ipynb
+++ b/Figures_Tables/main_text/Table2.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -107,6 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change the variable names\n",
     "cov_label = [iii.replace(\"Frequent_Exacerbator_P2\", \"Frequent Exacerbator (History)\")\\\n",
     "             .replace(\"Frequent_Exacerbator_P3\", \"Frequent Exacerbator (Future)\")\\\n",
     "             .replace(\"smoking_status_P2\", \"%Current Smoker\").replace(\"_P2\", \"\").replace(\"P3\", \"\")\\\n",
@@ -123,11 +131,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Computing the correlation coefficients"
+   ]
   },
   {
    "cell_type": "code",
@@ -140,6 +148,13 @@
     "corr_coef = np.around(corr_coef, 2)\n",
     "\n",
     "cov_label += [\"IEA$_{emph}$\", \"IEA$_{airway}$\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate the Table"
    ]
   },
   {
