--- a/Figures_Tables/main_text/Table4.ipynb
+++ b/Figures_Tables/main_text/Table4.ipynb
@@ -36,8 +36,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +101,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training Logistic Regression models"
+   ]
   },
   {
    "cell_type": "code",
@@ -156,6 +170,7 @@
     "    \n",
     "    \n",
     "    for iii in range(1, len(independent) + 1):\n",
+    "        # Obtaining the beta coefficients and 95% confidence intervals        \n",
     "        col = independent[iii-1]\n",
     "        eee = \"{:.2f}\".format(v[iii, 0])\n",
     "        ppp = v[iii, 3]\n",
@@ -165,12 +180,11 @@
     "            eee += \"*\"\n",
     "        if ppp<.001:\n",
     "            eee += \"*\"\n",
-    "            \n",
     "        CI1 = \"({:.2f}, {:.2f})\".format(v[iii, 4], v[iii, 5])\n",
     "        \n",
     "        cov_dict[col].append(eee + CI1)\n",
     "\n",
-    "        \n",
+    "        # Obtaining the odds ratio and 95% confidence intervals\n",
     "        col = independent[iii-1]\n",
     "        eee = \"{:.2f}\".format( np.exp( v[iii, 0]) )\n",
     "        ppp = v[iii, 3]\n",
@@ -186,6 +200,13 @@
     "        exp_cov_dict[col].append(eee + CI2)\n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training the Cox proportional harzard Model"
    ]
   },
   {
@@ -208,6 +229,7 @@
     "v = M.summary\n",
     "\n",
     "for col in v.index:\n",
+    "    # Obtaining the beta coefficients and 95% confidence intervals            \n",
     "    eee = \"{:.2f}\".format( v.loc[col, \"coef\"] )\n",
     "    ppp =  v.loc[col, \"p\"]\n",
     "    if ppp<.05:\n",
@@ -221,6 +243,7 @@
     "\n",
     "    cov_dict[col].append(eee + CI1)\n",
     "\n",
+    "    # Obtaining the harzard ratio and 95% confidence intervals\n",
     "    eee = \"{:.2f}\".format( np.exp( v.loc[col, \"coef\"] ) )\n",
     "    ppp =  v.loc[col, \"p\"]\n",
     "    if ppp<.05:\n",
