--- a/Figures_Tables/main_text/Table5.ipynb
+++ b/Figures_Tables/main_text/Table5.ipynb
@@ -35,6 +35,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -100,6 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The covariances used.\n",
     "covariances = [\"Age_P2\", \"gender\", \"race\", \n",
     "               \"smoking_status_P2\", \n",
     "               \"BMI_P2\", \"ATS_PackYears_P2\",\n",
@@ -116,11 +124,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Seperating the data according to the quadrants"
+   ]
   },
   {
    "cell_type": "code",
@@ -153,6 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change the variable names.\n",
     "cov_label = [iii.replace(\"Frequent_Exacerbator_P2\", \"Frequent Exacerbator (History)\")\\\n",
     "             .replace(\"Frequent_Exacerbator_P3\", \"Frequent Exacerbator (Future)\")\\\n",
     "             .replace(\"smoking_status_P2\", \"%Current Smoker\").replace(\"_P2\", \"\").replace(\"P3\", \"\")\\\n",
@@ -169,6 +178,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computing the p-values and organize the Table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -180,11 +196,13 @@
     "    if ccc == \"gender\" or ccc == \"race\" or ccc == \"smoking_status_P2\" \\\n",
     "    or ccc == \"Frequent_Exacerbator_P2\" or ccc == \"Frequent_Exacerbator_P3\" \\\n",
     "       or ccc == \"5-year Mortality_P2\": \n",
+    "        # Chi-squared test for categorical variables.\n",
     "        p_val = proportions_chisquare(\n",
     "            [ ( fff[ccc] == 1 ).sum() for fff in [df0, df1, df2, df3] ],\n",
     "            [ ( ~np.isnan(fff[ccc] ) ).sum() for fff in [df0, df1, df2, df3] ]\n",
     "        )[1]\n",
     "    else:\n",
+    "        # One-way ANOVA for real-valued variables.\n",
     "        p_val = f_oneway( *[ fff.loc[ ~fff[ccc].isnull(), ccc] for fff in [df0, df1, df2, df3] ] ).pvalue\n",
     "    \n",
     "    \n",
@@ -236,6 +254,13 @@
     "\n",
     "            \n",
     "val = np.array(val)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate the table."
    ]
   },
   {
