--- a/Figures_Tables/main_text/Table6.ipynb
+++ b/Figures_Tables/main_text/Table6.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -93,7 +100,15 @@
    "source": [
     "columns_used = [\"IEA0\", \"IEA1\", \"PCA_emphysema_axis\", \"PCA_airway_axis\", \"PC0_P1\", \"PC1_P1\"]\n",
     "df_used = df_merged[ columns_used ]\n",
+    "# Flip the first principal component for consistentcy\n",
     "df_used.loc[:, \"PC0_P1\"] = - df_used[\"PC0_P1\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computing Pearson's r"
    ]
   },
   {
@@ -104,6 +119,13 @@
    "source": [
     "pearson_r = np.round(df_used.corr().to_numpy(), 2)\n",
     "cov_names = [\"IEA$_{emph}$\", \"IEA$_{airway}$\", \"FA$_{emph}$\", \"FA$_{airway}$\", \"PCA-I1\", \"PCA-I2\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate the Table"
    ]
   },
   {
