--- a/Figures_Tables/Supplementary/TableE2.ipynb
+++ b/Figures_Tables/Supplementary/TableE2.ipynb
@@ -22,6 +22,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -40,27 +47,31 @@
     }
    ],
    "source": [
-    "    data_train = utility.image_gene_dataset(train = True, cv = None)\n",
-    "    data_test = utility.image_gene_dataset(train = False, cv = None)\n",
+    "data_train = utility.image_gene_dataset(train = True, cv = None)\n",
+    "data_test = utility.image_gene_dataset(train = False, cv = None)\n",
     "\n",
-    "    train_loader = DataLoader(data_train)\n",
-    "    test_loader = DataLoader(data_test)\n",
+    "train_loader = DataLoader(data_train)\n",
+    "test_loader = DataLoader(data_test)\n",
     "\n",
     "\n",
-    "    sid_train, features_train, genes_train = data_train[:]\n",
-    "    sid_test, features_test, genes_test = data_test[:]\n",
+    "sid_train, features_train, genes_train = data_train[:]\n",
+    "sid_test, features_test, genes_test = data_test[:]\n",
     "\n",
-    "    sid_P1, features_P1 = utility.load_SSL_features_P1()\n",
-    "    features_P1 = torch.tensor(features_P1)"
+    "sid_P1, features_P1 = utility.load_SSL_features_P1()\n",
+    "features_P1 = torch.tensor(features_P1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_aligned_axes(thold):\n",
+    "    \"\"\"\n",
+    "    Return the aligned axes.\n",
+    "    thold: the thresholds for the adjusted p-values for gene selection.\n",
+    "    \"\"\"\n",
     "\n",
     "    beta = .1\n",
     "    gamma = 1.0\n",
@@ -78,7 +89,7 @@
     "\n",
     "\n",
     "    M = IEA_model.IEA( L = L,  idx_gene = idx_gene ).cuda()\n",
-    "\n",
+    "    # Generate the IEAs with the cross-valudation models\n",
     "    for cv in range(5):\n",
     "        filename = \"../../models/model_L{}_cv{}_beta{}_gamma{}_genes{}\".format(L, cv, beta, gamma, len(idx_gene))\n",
     "\n",
@@ -99,6 +110,7 @@
     "\n",
     "    Z_test_aligned = []\n",
     "\n",
+    "    # Align the IEAs from models with different cross-validation.\n",
     "    for cv in range(0,5):\n",
     "        Z_cat = np.concatenate( [ Z_train_cv[ 0, :, : ], Z_train_cv[ cv, :, : ] ], axis = 1 )\n",
     "        corrcoef = np.corrcoef(Z_cat.T)\n",
@@ -141,17 +153,40 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Obtainint the final IEAs based on the IEAs in cross-validation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/ocean/projects/asc170022p/juc91/anaconda/envs/IEA/lib/python3.7/site-packages/pandas/core/generic.py:8870: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return self._update_inplace(result)\n",
+      "../../src/utility.py:166: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_cov[df_cov == \"\"] = \"nan\"\n",
+      "/ocean/projects/asc170022p/juc91/anaconda/envs/IEA/lib/python3.7/site-packages/pandas/core/frame.py:3718: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._where(-key, value, inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "df_data = utility.load_data()\n",
     "\n",
@@ -183,8 +218,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computing the correlation coefficients with resepct to the final IEAs with threshold 0.01 "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +243,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate the Table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
