--- a/Figures_Tables/main_text/Table3.ipynb
+++ b/Figures_Tables/main_text/Table3.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -88,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression models"
+    "# Train linear regression models"
    ]
   },
   {
@@ -143,7 +150,7 @@
     "    \n",
     "    v = M_OLS.summary2().tables[1].values\n",
     "    \n",
-    "    \n",
+    "    # Obtaining the beta coefficients and 95% confidence intervals\n",
     "    for iii in range(1, len(independents) + 1):\n",
     "        col = independents[iii-1]\n",
     "        eee = \"{:.2f}\".format(v[iii, 0])\n",
