Update figures and tables.

--- a/Figures_Tables/Supplementary/TableE1.ipynb
+++ b/Figures_Tables/Supplementary/TableE1.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the Table"
+    "# Generating the Table"
    ]
   },
   {
