--- a/Figures_Tables/Supplementary/TableE10.ipynb
+++ b/Figures_Tables/Supplementary/TableE10.ipynb
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cox harzard model with both IEAs and PCA-I"
+    "# Cox proportional harzard model with both IEAs and PCA-I"
    ]
   },
   {
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cox harzard model with PCA-I only"
+    "# Cox proportional harzard model with PCA-I only"
    ]
   },
   {
