--- a/Figures_Tables/Supplementary/TableE2.ipynb
+++ b/Figures_Tables/Supplementary/TableE2.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obtainint the final IEAs based on the IEAs in cross-validation"
+    "# Obtaining the final IEAs based on the IEAs in cross-validation"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the Table"
+    "# Generating the table"
    ]
   },
   {
