--- a/Figures_Tables/Supplementary/TableE3.ipynb
+++ b/Figures_Tables/Supplementary/TableE3.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the table"
+    "# Generating the table"
    ]
   },
   {
