--- a/Figures_Tables/Supplementary/TableE8.ipynb
+++ b/Figures_Tables/Supplementary/TableE8.ipynb
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cox harzard model with FAs only"
+    "# Cox proportional harzard model with FAs only"
    ]
   },
   {
