--- a/Figures_Tables/main_text/Figure4.ipynb
+++ b/Figures_Tables/main_text/Figure4.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the box plot"
+    "# Generating the box plot"
    ]
   },
   {
