--- a/Figures_Tables/main_text/Table1.ipynb
+++ b/Figures_Tables/main_text/Table1.ipynb
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the table"
+    "# Generating the table"
    ]
   },
   {
