--- a/Figures_Tables/main_text/Table2.ipynb
+++ b/Figures_Tables/main_text/Table2.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the Table"
+    "# Generating the Table"
    ]
   },
   {
