--- a/Figures_Tables/main_text/Table4.ipynb
+++ b/Figures_Tables/main_text/Table4.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the table"
+    "# Generating the table"
    ]
   },
   {
