--- a/Figures_Tables/main_text/Table5.ipynb
+++ b/Figures_Tables/main_text/Table5.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computing the p-values and organize the Table"
+    "# Computing the p-values and organizing the table"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the table."
+    "# Generating the table"
    ]
   },
   {
