--- a/Figures_Tables/Supplementary/FigureE2.ipynb
+++ b/Figures_Tables/Supplementary/FigureE2.ipynb
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot the total variance explained for the selected genes"
+    "# Plotting the total variance explained for the selected genes"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot the total variance explained for all genes"
+    "# Plotting the total variance explained for all genes"
    ]
   },
   {
