--- a/Figures_Tables/Supplementary/TableE5.ipynb
+++ b/Figures_Tables/Supplementary/TableE5.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cox harzard model with both IEAs and COPD measurements"
+    "# Cox proportional harzard model with both IEAs and COPD measurements"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cox harzard model with COPD measurements only"
+    "# Cox proportional harzard model with COPD measurements only"
    ]
   },
   {
