--- a/Figures_Tables/Supplementary/TableE6.ipynb
+++ b/Figures_Tables/Supplementary/TableE6.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the table"
+    "# Generating the table"
    ]
   },
   {
