--- a/Figures_Tables/main_text/Table3.ipynb
+++ b/Figures_Tables/main_text/Table3.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train linear regression models"
+    "# Training linear regression models"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the table"
+    "# Generating the table"
    ]
   },
   {
