--- a/Figures_Tables/main_text/Table6.ipynb
+++ b/Figures_Tables/main_text/Table6.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the data"
+    "# Loading data"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate the Table"
+    "# Generating the table"
    ]
   },
   {
