--- a/Figures_Tables/Supplementary/TableE4.ipynb
+++ b/Figures_Tables/Supplementary/TableE4.ipynb
@@ -439,7 +439,7 @@
     "       'pctEmph_Thirona_P2', 'Perc15_Insp_Thirona_P2', 'pctGasTrap_Thirona_P2',\n",
     "       'Pi10_Thirona_P2',  'WallAreaPct_seg_Thirona_P2']\n",
     "\n",
-    "cov_label = [ 'IEA$_{emph}$', 'IEA$_{eairway}$' ,'Age',\n",
+    "cov_label = [ 'IEA$_{emph}$', 'IEA$_{airway}$' ,'Age',\n",
     " 'Gender,\\n%females', 'Race, \\n%African-American',\n",
     " 'Pack Years', 'Body Mass Index \\n(BMI)',\n",
     " 'Smoking Status', '%Emphysema \\nat -950HU',\n",
@@ -507,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -521,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
