--- a/Figures_Tables/Supplementary/TableE2.ipynb
+++ b/Figures_Tables/Supplementary/TableE2.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table E2\n",
+    "\n",
+    "## Linear Regression with image-expression axes (IEAs) and COPD measurements with COPDGene visit 2 data. \n",
+    "The table reports the β coefficients of linear regression models for estimating the cross-sectional and longitudinal measurements. The values in the brackets are the 95% confidence interval of the β coefficients. We included the models with COPD measurements + IEAs and those with COPD measurements only, and reported the p-values of the likelihood ratio test. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -566,7 +576,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -580,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
