--- a/Figures_Tables/Supplementary/TableE10.ipynb
+++ b/Figures_Tables/Supplementary/TableE10.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table E11 \n",
-    "## Logistic regression and Cox model with image-expression axes (IEAs) and factor analysis axes (FAs) on COPDGene visit 1 data. \n",
-    "The table reports the β coefficients, the odds/hazard ratio, and the corresponding 95% confidence interval in logistic regression and the Cox model to estimate the frequent exacerbator and mortality. We included the models with FAs + IEAs and the models with FAs only, and reported the p-values of the likelihood ratio test. "
+    "# Table E10\n",
+    "## Linear regression analysis with image-expression axes (IEAs) and factor analysis axes (FAs) on COPDGene visit 1 data. \n",
+    "The table reports the β coefficients and the corresponding 95% confidence intervals. We included the models with FAs + IEAs and the models with FAs only, and reported the p-values of the likelihood ratio test."
    ]
   },
   {
