--- a/Figures_Tables/Supplementary/TableE6.ipynb
+++ b/Figures_Tables/Supplementary/TableE6.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table E6\n",
+    "## Logistic regression and Cox proportional harzard models with image-expression axes (IEAs) and COPD measurements with 1,527 subjects from another subset of the COPDGene dataset that had not been used for model training.  \n",
+    "The table reports the β coefficients, the odds/hazard ratio and the corresponding 95% confidence intervals in the logistic regression and Cox model to estimate the frequent exacerbator and mortality."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_IEA = pd.concat([df_IEA_train, df_IEA_test])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -814,96 +814,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " pd.merge?"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_base = pd.DataFrame(cov_dict_base, index = rows)\n",
-    "df_base.insert(0, \"IEA0\", \"-\")\n",
-    "df_base.insert(1, \"IEA1\", \"-\")\n",
-    "df_base.insert(2, \"p-values\\n(likelihood ratio test)\", \"\")\n",
-    "df_base.insert(2, \"model\", \"COPD measurements\")\n",
-    "\n",
-    "df_exp_base = pd.DataFrame(exp_cov_dict_base, index = rows)\n",
-    "df_exp_base.insert(0, \"exp_IEA0\", \"-\")\n",
-    "df_exp_base.insert(1, \"exp_IEA1\", \"-\")\n",
-    "df_exp_base = df_exp_base.rename(columns = {iii:\"exp_\" + iii  for iii in exp_cov_dict_base.keys()} )\n",
-    "\n",
-    "\n",
-    "\n",
-    "df_alt = pd.DataFrame(cov_dict_IEA, index = [iii + \" \" for iii in rows] )\n",
-    "df_alt.insert(2, \"p-values\\n(likelihood ratio test)\", p_values_str)\n",
-    "df_alt.insert(2, \"model\", \"COPD measurements + IEAs\")\n",
-    "\n",
-    "df_exp_alt = pd.DataFrame(exp_cov_dict_IEA,index = [iii + \" \" for iii in rows])\n",
-    "df_exp_alt = df_exp_alt.rename(columns = {iii:\"exp_\" + iii  for iii in exp_cov_dict_IEA.keys()} )\n",
-    "\n",
-    "df_base = pd.merge(df_base, df_exp_base, left_index = True, right_index = True)\n",
-    "df_alt = pd.merge(df_alt, df_exp_alt, left_index = True, right_index = True)\n",
-    "\n",
-    "df_final = pd.concat([df_base, df_alt])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rows_final = np.concatenate( [ [iii , iii + \" \"] for iii in rows] )\n",
-    "columns_final = np.concatenate( [ [\"model\", \"p-values\\n(likelihood ratio test)\"] ] + [ [iii, \"exp_\" + iii] for iii in cov_dict_IEA.keys()] )\n",
-    "\n",
-    "df_final = df_final[columns_final].loc[rows_final]\n",
-    "\n",
-    "df_final = df_final.rename(columns = \n",
-    "{\"IEA0\":'IEA emph',\n",
-    " \"IEA1\":'IEA airway',\n",
-    "\"Age_P2\":'Age',\n",
-    "\"gender\": 'Gender,\\n%females',\n",
-    "'race': 'Race, \\n%African-American',\n",
-    "'ATS_PackYears_P2': 'Pack Years',\n",
-    "'BMI_P2': 'Body Mass Index \\n(BMI)',\n",
-    "\"smoking_status_P2\":'Smoking Status',\n",
-    "'Perc15_Insp_Thirona_P2': 'perc15',\n",
-    "'pctGasTrap_Thirona_P2': '%Gas Trapping',\n",
-    "'WallAreaPct_seg_Thirona_P2': '%Airway Wall, \\nSegmental'\n",
-    "} )\n",
-    "\n",
-    "df_final = df_final.rename(columns = {\"exp_\" + iii:\"Hazard Ratio\"  for iii in exp_cov_dict_IEA.keys()} )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with pd.ExcelWriter('TableE6_AD.xlsx', \n",
-    "                   ) as writer:  \n",
-    "    df_final.to_excel(writer, sheet_name='TableE6')"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -917,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
